@@ -10,6 +10,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.ObjectProvider;
 import site.asm0dey.slidev.polls.core.domain.Option;
@@ -66,11 +67,21 @@ class PollServiceLockTest {
     ObjectProvider<PollService> provider =
         new ObjectProvider<>() {
           @Override
-          public PollService getObject() {
+          public @NonNull PollService getObject() {
             return holder[0];
           }
         };
-    PollService service = new PollService(repo, ev -> {}, provider, votes);
+    PollCollaboratorRepository collaborators = new NoCollaborators();
+    PollService service =
+        new PollService(
+            repo,
+            ev -> {},
+            provider,
+            votes,
+            new PollAuthorizer(collaborators),
+            collaborators,
+            null,
+            null);
     holder[0] = service;
 
     Poll created =
@@ -86,8 +97,8 @@ class PollServiceLockTest {
                             new CreatePollCommand.OptionDraft("A"),
                             new CreatePollCommand.OptionDraft("B")))),
                 null));
-    UUID qid = created.questions().get(0).id();
-    UUID oid = created.questions().get(0).options().get(0).id();
+    UUID qid = created.questions().getFirst().id();
+    UUID oid = created.questions().getFirst().options().getFirst().id();
     votes.insert(
         new Vote(UUID.randomUUID(), created.id(), qid, List.of(oid), "voter-1", Instant.now()));
     // Mirror the vote into the poll-side count cache; the production
@@ -114,7 +125,7 @@ class PollServiceLockTest {
     }
 
     UpdatePollCommand removeFirstOption() {
-      Question q = poll.questions().get(0);
+      Question q = poll.questions().getFirst();
       // Drop the first option (the voted one). The two remaining option slots are required for
       // QuestionUpdate's @Size(min=2), so insert a new option to keep arity valid.
       List<CreatePollCommand.OptionUpdate> opts = new ArrayList<>();
@@ -135,7 +146,7 @@ class PollServiceLockTest {
     }
 
     UpdatePollCommand flipArityOnActiveQuestion(int min, int max) {
-      Question q = poll.questions().get(0);
+      Question q = poll.questions().getFirst();
       List<CreatePollCommand.OptionUpdate> opts = new ArrayList<>();
       for (Option o : q.options()) {
         opts.add(new CreatePollCommand.OptionUpdate(o.id(), o.label()));
@@ -148,7 +159,7 @@ class PollServiceLockTest {
     }
 
     UpdatePollCommand rewordPromptAndLabels() {
-      Question q = poll.questions().get(0);
+      Question q = poll.questions().getFirst();
       List<CreatePollCommand.OptionUpdate> opts = new ArrayList<>();
       for (Option o : q.options()) {
         opts.add(new CreatePollCommand.OptionUpdate(o.id(), o.label() + " (renamed)"));
@@ -190,12 +201,19 @@ class PollServiceLockTest {
     }
 
     @Override
+    public Poll transferOwner(UUID pollId, String newOwnerUsername) {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public List<Poll> findOwnedOrCollaborated(String username) {
+      return byId.values().stream().filter(p -> p.ownerUsername().equals(username)).toList();
+    }
+
+    @Override
     public boolean slugTaken(String slug, UUID excludingPollId) {
       return byId.values().stream()
-          .anyMatch(
-              p ->
-                  p.slug().equalsIgnoreCase(slug)
-                      && (excludingPollId == null || !p.id().equals(excludingPollId)));
+          .anyMatch(p -> p.slug().equalsIgnoreCase(slug) && !p.id().equals(excludingPollId));
     }
 
     @Override
@@ -372,6 +390,30 @@ class PollServiceLockTest {
     @Override
     public Optional<List<UUID>> deleteByQuestionAndVoter(UUID questionId, String voterToken) {
       throw new UnsupportedOperationException();
+    }
+  }
+
+  /** Owner-path lock tests never share a poll, so collaborator lookups always miss. */
+  static final class NoCollaborators implements PollCollaboratorRepository {
+    @Override
+    public site.asm0dey.slidev.polls.core.domain.PollCollaborator add(
+        UUID pollId, String username) {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public void remove(UUID pollId, String username) {
+      throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public boolean exists(UUID pollId, String username) {
+      return false;
+    }
+
+    @Override
+    public List<site.asm0dey.slidev.polls.core.domain.PollCollaborator> listByPoll(UUID pollId) {
+      return List.of();
     }
   }
 }
